Refactormen funkar ej
Jag har refactorat för arkitekturens och tydlighetens skull i koden, funkar ej, kan vara pga fel addresser i html-filerna kanske

--- a/construction-app/server/construction-app-api/exportToHTML/com/example/constructionappapi/services/KundService.java.html
+++ b/construction-app/server/construction-app-api/exportToHTML/com/example/constructionappapi/services/KundService.java.html
@@ -14,12 +14,12 @@
 KundService.java</font>
 </center></td></tr></table>
 <pre><span class="s0">package </span><span class="s1">com.example.constructionappapi.services</span><span class="s0">;</span>
-<span class="s0">import </span><span class="s1">com.example.constructionappapi.model.Kund</span><span class="s0">;</span>
+<span class="s0">import </span><span class="s1">com.example.constructionappapi.dataAccessLayer.model.Costumer</span><span class="s0">;</span>
 
 <span class="s0">import </span><span class="s1">java.util.List</span><span class="s0">;</span>
 
 <span class="s0">public interface </span><span class="s1">KundService {</span>
-    <span class="s1">Kund createKund(Kund kund)</span><span class="s0">;</span>
+    <span class="s1">Kund createKund(Kund costumer)</span><span class="s0">;</span>
 
     <span class="s1">List&lt;Kund&gt; getAllKunder()</span><span class="s0">;</span>
 <span class="s1">}</span>
