--- a/construction-app/server/construction-app-api/exportToHTML/com/example/constructionappapi/services/KundService.java.html
+++ b/construction-app/server/construction-app-api/exportToHTML/com/example/constructionappapi/services/KundService.java.html
@@ -19,7 +19,7 @@ KundService.java</font>
 <span class="s0">import </span><span class="s1">java.util.List</span><span class="s0">;</span>
 
 <span class="s0">public interface </span><span class="s1">KundService {</span>
-    <span class="s1">Kund createKund(Kund costumer)</span><span class="s0">;</span>
+    <span class="s1">Kund createKund(Kund customer)</span><span class="s0">;</span>
 
     <span class="s1">List&lt;Kund&gt; getAllKunder()</span><span class="s0">;</span>
 <span class="s1">}</span>
